# RT-NRT_IPC_Xenomai

./: CMakeLists.txt  README.md
conf/: kernel_config
doc/ipc/: RT-NRT-OSystem-Programming.odt
src/RTipc/: iddp_label.c  xbotcore_flow.c  xddp_label.c
src/ipc/: fifo_reader.c  fifo_writer.c  message_queue_reader.c  message_queue_writer.c  posix-shm-client.c  posix-shm-sem-reader.c  posix-shm-sem-writer.c  posix-shm-server.c  socket-client.c  socket-server.c  unix-domain-socket-client.c  unix-domain-socket-server.c  unnamed_pipe.c
